<resources>

    <!--venura's part -->
    <string name="app_name">Ease Assistant App</string>
    <string name="Btn1">Calculate BMI</string>
    <string name="Btn2"><![CDATA[Health Notices & Images]]></string>
    <string name="HomeBtn1">Health</string>
    <string name="HomeBtn2"><![CDATA[Income & Expenses]]></string>
    <string name="HomeBtn3">Academic</string>
    <string name="HomeBtn4">Household</string>
    <string name="lbl_1">Height</string>
    <string name="lbl_2">Weight</string>
    <string name="lbl_3">BMI:</string>
    <string name="calButton">Calculate BMI</string>
    <string name="Height1">Feet</string>
    <string name="Height2">Inches</string>
    <string name="weight1">Pounds</string>
    <string name="academic">Academic</string>
    <string name="health">health</string>
    <string name="household">household</string>
    <string name="income">income</string>
    <string name="lbl_4">Title</string>
    <string name="lbl_5">Description</string>
    <string name="Btn3">Cancel</string>
    <string name="Btn4">Create</string>
    <string name="Btn5">Update</string>
    <string name="lbl_6"><![CDATA[Health Notices & Images]]></string>
    <string name="lbl_7">Delete the selected content?</string>
    <string name="Btn6">Cancel</string>
    <string name="Btn7">Delete</string>
    <string name="descriptionHint">Enter your Reminders/Notes/Description.</string>
    <string name="titleHint">Enter title</string>




    <!--Thusil's part -->
    <string name="H1"> Monthly shopping list</string>
    <string name="amount1">Rs.10000</string>
    <string name="listing">LISTINGS</string>
    <string name="h1">HOUSEHOLD</string>
    <string name="h2">Create a new list</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="total">Calculate Total</string>
    <string name="create_btn">CREATE</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="tot_btn">CALCULATE</string>
    <string name="update_btn">UPDATE</string>
    <string name="upd_txt">Update a list</string>
    <string name="bmiweight">kg</string>
    <string name="bmiHeight">cm</string>
    <string name="lbl_6new"> Health Notices and Reminders </string>


    <!--tharindu's part -->
    <string name="bal">Balance</string>
    <string name="exp">Expenses</string>
    <string name="balanceValue">Rs.</string>
    <string name="txt1">Expenses</string>
    <string name="txt2">Balance</string>
    <string name="txt3">Transaction Details</string>
    <string name="txt4">Amount</string>
    <string name="buttonSave">SAVE</string>
    <string name="popdelete">Delete</string>
    <string name="cancelDelete">Cancel</string>
    <string name="invalid_expdetails">Please Fill This</string>
    <string name="invalid_extype">Enter Credit / Debit</string>
    <string name="invalid_examount">Enter an Amount</string>


</resources>